src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Default_Expiration_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Expiration Reason</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an Inactive Reason from the list related to this Program.</errorMessage>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Inactive_Reason__c.Programs__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Inactive_Reason__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A brief summary of the Mission.</description>
        <inlineHelpText>What are the goals/intents of the Mission.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the Program is currently available.</description>
        <inlineHelpText>Is this an active/available Program?</inlineHelpText>
        <label>Active Program</label>
        <type>Checkbox</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>